Html structure, and css files

--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/styling.css">
+</head>
+<body>
+    <nav class="nav-bar"></nav>
+    <main>
+        <section class="info-section">
 
+        </section>
+        <section class="neptune-section">
 
-hello there
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+</body>
+</html>
