Added id's to the sections and made some changes to navbar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    <nav class="nav-bar"></nav>
+    <nav class="nav-bar">
+        <a href="#info">info</a>
+        <a href="#neptune">Neptune</a>
+
+    </nav>
     <main>
-        <section class="info-section">
+        <section id="info" class="info-section">
 
         </section>
-        <section class="neptune-section">
+        <section id="neptune" class="neptune-section">
 
         </section>
     </main>
