--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav class="nav-bar">
+        <img src="" alt="">
         <a href="#info">info</a>
         <a href="#neptune">Neptune</a>
-
     </nav>
     <main>
         <section id="info" class="info-section">
