Added a planets logo, and changed the navbar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <img src="" alt="">
-        <a href="#info">info</a>
-        <a href="#neptune">Neptune</a>
+        <img src="/PlanetProjekt/images/earth-logo-2.svg" alt="Earth logo">
+        <a href="#info">INFO</a>
+        <a href="#neptune">NEPTUNE</a>
     </nav>
     <main>
         <section id="info" class="info-section">
