Started on the info section, and hr line

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     </nav>
     <main>
         <section id="info" class="info-section">
-
+            <div>
+                <h1>PLANETS ARE COOL</h1>
+                <h2>This is a litte site about planets</h2>
+            </div>
+            <div></div>
         </section>
+        <hr>
         <section id="neptune" class="neptune-section">
 
         </section>
