Added max-width to both

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <img src="/PlanetProjekt/images/earth-logo-2.svg" alt="Earth logo">
+        <img src="images/earth-logo-2.svg" alt="Earth logo">
         <a href="#info">INFO</a>
         <a href="#neptune">NEPTUNE</a>
     </nav>
