--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </nav>
     <main>
         <section id="info" class="info-section">
-            <div>
+            <div class="info-text">
                 <h1>PLANETS ARE COOL</h1>
                 <h2>This is a litte site about planets</h2>
             </div>
-            <div></div>
+            <div>
+                <img src="/PlanetProjekt/images/earth-logo.svg" alt="">
+            </div>
         </section>
         <hr>
         <section id="neptune" class="neptune-section">
