--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>The solar system has eight planets: Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. There are five officially recognized dwarf planets in our solar system: Ceres, Pluto, Haumea, Makemake, and Eris</h2>
             </div>
             <div>
-                <img src="/PlanetProjekt/images/earth-logo.svg" alt="">
+                <img src="images/moon.svg" alt="">
             </div>
         </section>
         <hr>
