Done with the info section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <section id="info" class="info-section">
             <div class="info-text">
                 <h1>PLANETS ARE COOL</h1>
-                <h2>The solar system has eight planets: Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. There are five officially recognized dwarf planets in our solar system: Ceres, Pluto, Haumea, Makemake, and Eris</h2>
+                <h2>The solar system has eight planets: Mercury,
+                     Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune. 
+                     There are five officially recognized dwarf planets in our
+                      solar system: Ceres, Pluto, Haumea, Makemake, and Eris. 
+                      <br>
+                      The moon is not a planet, but is Cool looking</h2>
             </div>
             <div>
                 <img src="images/moon.svg" alt="">
