Added text to the neptune section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
             <div class="wrap">
                 <img src="images/new-neptune.svg" alt="Image of Neptune" id="Neptune">
             </div>
+            <div id="Neptunetext">
+                <h1>This planet is cool but scary</h1>
+                <h2 id="NeptuneTexting">Neptune is a cool looking planet, but the thing that makes it scary is just its size.
+                    Its a giant iceball in space, and it looks like at any moment it will wake up from its slumber.
+                    Another reason its cool but scary is the fact that it protects Earth from metors. Its gravitational pull is so strong that most astroids go past our system.
+                </h2>
+            </div>
         </section>
     </main>
     <footer>
