Added img of sun

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       The moon is not a planet, but is Cool looking</h2>
             </div>
             <div>
-                <img src="images/moon.svg" alt="">
+                <img src="images/moon.svg" alt="Image of the moon">
             </div>
         </section>
         <hr>
