--- a/index.html
+++ b/index.html
@@ -26,22 +26,20 @@
                       The moon is not a planet, but is Cool looking</h2>
             </div>
             <div>
-                <img src="images/moon.svg" alt="Image of the moon">
+                <img src="images/moon.png" alt="Image of the moon">
             </div>
         </section>
         <hr>
-        <br>
-        <br>
         <section id="neptune" class="neptune-section">
             <div class="wrap">
-                <img src="images/new-neptune.svg" alt="Image of Neptune" id="Neptune">
+                <img src="images/new-neptune.png" alt="Image of Neptune" id="Neptune">
             </div>
             <div id="Neptunetext">
-                <h1>This planet is cool but scary</h1>
-                <h2 id="NeptuneTexting">Neptune is a cool looking planet, but the thing that makes it scary is just its size.
+                <h2>This planet is cool but scary</h2>
+                <h3 id="NeptuneTexting">Neptune is a cool looking planet, but the thing that makes it scary is just its size.
                     Its a giant iceball in space, and it looks like at any moment it will wake up from its slumber.
                     Another reason its cool but scary is the fact that it protects Earth from metors. Its gravitational pull is so strong that most astroids go past our system.
-                </h2>
+                </h3>
             </div>
         </section>
     </main>
