--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="nav-bar">
         <img src="images/earth-logo-2.svg" alt="Earth logo">
-        <a href="#info">INFO</a>
+        <a class="navinfo" href="#info">INFO</a>
         <a href="#neptune">NEPTUNE</a>
     </nav>
     <main>
