--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
             </div>
         </section>
     </main>
+    <hr>
     <footer>
-
+        <p>Made by Justin And Fredrik</p>
     </footer>
 </body>
 </html>
